erDiagram
    User ||--|| Role : "has"
    User ||--o| JobSeekerProfile : "optional"
    User ||--o{ EmployerMembership : "optional"

    JobSeekerProfile ||--o{ Resume : "owns"

    Resume ||--o{ ResumeEducation : "contains"
    Resume ||--o{ ResumeWorkExperience : "contains"
    Resume }o--o{ Skill : "resume_skill"

    Company ||--o{ EmployerMembership : "employs"
    Company ||--o{ Vacancy : "publishes"

    Industry ||--o{ Company : "classifies"
    Industry ||--o{ Vacancy : "optional_filter"

    ExperienceLevel ||--o{ Vacancy : "requires"

    Vacancy }o--o{ Skill : "vacancy_skill"

    User ||--o{ Application : "submits"
    Vacancy ||--o{ Application : "receives"

    Role {
        int id PK
        string code "candidate | employer | admin"
        string name
    }

    User {
        int id PK
        int role_id FK
        string email UK
        string password_hash
        datetime created_at
        datetime updated_at
        bool is_active
    }

    JobSeekerProfile {
        int user_id PK, FK
        string first_name
        string last_name
        string phone
        string city
        string bio
    }

    Resume {
        int id PK
        int user_id FK
        string title
        string summary
        datetime updated_at
        bool is_public
    }

    ResumeEducation {
        int id PK
        int resume_id FK
        string institution
        string degree
        int year_from
        int year_to
    }

    ResumeWorkExperience {
        int id PK
        int resume_id FK
        string company_name
        string position
        string description
        date date_from
        date date_to
    }

    Skill {
        int id PK
        string name UK
    }

    Company {
        int id PK
        int industry_id FK
        string name
        string description
        string website
        string legal_name
        datetime created_at
    }

    EmployerMembership {
        int id PK
        int user_id FK
        int company_id FK
        string position_title
        bool is_owner
    }

    Industry {
        int id PK
        string name UK
    }

    ExperienceLevel {
        int id PK
        string code UK "junior | middle | senior"
        string name
        int sort_order
    }

    Vacancy {
        int id PK
        int company_id FK
        int industry_id FK
        int experience_level_id FK
        string title
        string description
        string requirements
        decimal salary_min
        decimal salary_max
        string currency
        string employment_type "full_time | part_time | contract"
        string status "draft | published | closed"
        datetime published_at
        datetime created_at
        datetime updated_at
    }

    Application {
        int id PK
        int vacancy_id FK
        int user_id FK
        int resume_id FK
        string status "new | viewed | rejected | invited"
        datetime created_at
    }
